@@ -1,5 +1,6 @@
 package com.gftworkshopcatalog.services.impl;
 
+import com.gftworkshopcatalog.exceptions.NotFoundPromotion;
 import com.gftworkshopcatalog.model.ProductEntity;
 
 import com.gftworkshopcatalog.model.PromotionEntity;
@@ -7,15 +8,12 @@ import com.gftworkshopcatalog.repositories.ProductRepository;
 import com.gftworkshopcatalog.repositories.PromotionRepository;
 import com.gftworkshopcatalog.services.PromotionService;
 import jakarta.annotation.PostConstruct;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.exception.DataException;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
-
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Slf4j
 @Service
@@ -34,44 +32,25 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     public List<PromotionEntity> findAllPromotions() {
-        try {
             return promotionRepository.findAll();
-        } catch (DataAccessException ex) {
-            log.error("Error accessing data from database", ex);
-            throw new RuntimeException("Error accessing data from database", ex);
-        }
     }
 
     public PromotionEntity findPromotiontById(long promotionId) {
-        return promotionRepository.findById(promotionId).orElseThrow(() -> {
-            log.error("Promotion not found with ID: {}", promotionId);
-            return new EntityNotFoundException("Promotion not found with ID: " + promotionId);
-        });
+        return promotionRepository.findById(promotionId)
+                .orElseThrow(() -> new NotFoundPromotion("Promotion not found with ID: " + promotionId));
     }
 
     public PromotionEntity addPromotion(PromotionEntity promotionEntity) {
         if (promotionEntity == null) {
             throw new IllegalArgumentException("Promotion details must not be null");
         }
-
-        try {
-            return promotionRepository.save(promotionEntity);
-        } catch (DataAccessException ex) {
-            throw new RuntimeException("Failed to add the promotion due to database error", ex);
-        }
+        return promotionRepository.save(promotionEntity);
     }
 
     public PromotionEntity updatePromotion(long promotionId, PromotionEntity promotionEntityDetails) {
-        PromotionEntity existingPromotion = promotionRepository.findById(promotionId)
-                .orElseThrow(() -> new EntityNotFoundException("Promotion not found with ID: " + promotionId));
-
+        PromotionEntity existingPromotion = findPromotiontById(promotionId);
         updatePromotionEntity(existingPromotion, promotionEntityDetails);
-
-        try{
-            return promotionRepository.save(existingPromotion);
-        } catch (DataException ex) {
-            throw new RuntimeException("Failed to update the promotion with ID: " + promotionId, ex);
-        }
+        return promotionRepository.save(existingPromotion);
     }
 
     private void updatePromotionEntity(PromotionEntity existingPromotion, PromotionEntity newDetails) {
@@ -84,30 +63,19 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     public void deletePromotion(long promotionId) {
-        PromotionEntity promotionEntity = findPromotiontById(promotionId);
-        log.info("Deleting promotion with ID: {}", promotionId);
-        try {
-            promotionRepository.delete(promotionEntity);
-        } catch (DataAccessException ex) {
-            log.error("Failed to delete promotion with ID: {}", promotionId, ex);
-            throw new EntityNotFoundException("Failed to delete promotion with ID: " + promotionId, ex);
-        }
+        PromotionEntity promotion = findPromotiontById(promotionId);
+        promotionRepository.delete(promotion);
     }
 
     public List<PromotionEntity> getActivePromotions() {
-        try {
-            List<PromotionEntity> promotions = promotionRepository.findAll();
-            promotions.forEach(this::updateIsActiveStatus);
-            applyActivePromotions(promotions.stream()
-                    .filter(promotion -> promotion.getIsActive() && promotion.getPromotionType().equals("SEASONAL"))
-                    .collect(Collectors.toList()));
-            return promotions.stream()
-                    .filter(PromotionEntity::getIsActive)
-                    .collect(Collectors.toList());
-        } catch (DataAccessException ex) {
-            log.error("Error accessing data from database", ex);
-            throw new RuntimeException("Error accessing data from database", ex);
-        }
+        List<PromotionEntity> promotions = promotionRepository.findAll();
+        promotions.forEach(this::updateIsActiveStatus);
+        applyActivePromotions(promotions.stream()
+                .filter(promotion -> promotion.getIsActive() && promotion.getPromotionType().equals("SEASONAL"))
+                .toList());
+        return promotions.stream()
+                .filter(PromotionEntity::getIsActive)
+                .toList();
     }
 
     private void updateIsActiveStatus(PromotionEntity promotion) {
@@ -128,3 +96,4 @@ public class PromotionServiceImpl implements PromotionService {
         });
     }
 }
+
